--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
 .display {
   width: 100%;
   height: 20%;
+  min-height: 8rem;
   background-color: #000;
   color: #fff;
   font-size: 7rem;
