--- a/styles.css
+++ b/styles.css
@@ -36,12 +36,15 @@ body {
   min-height: 8rem;
   background-color: #000;
   color: #fff;
-  font-size: 7rem;
+  font-size: 2rem;
   text-align: right;
   padding: 0 1rem;
   box-sizing: border-box;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .keys {
